--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,12 @@
-.box {
-    width: 100%;
+.input-area {
+    width: 620px;
+}
+
+.box1, .box2 {
+    width: 300px;
+    min-height: 400px;
+}
+
+.box1 {
+    margin-right: 10px;
 }
