--- a/style/style.css
+++ b/style/style.css
@@ -1,11 +1,26 @@
+
+.container {
+    text-align: center;
+}
+
+h1 {
+    text-align: left;
+}
+
+.previewer {
+    position: relative;
+    width: 80%;
+    text-align: center;
+}
+
 .input-area {
-    width: 1000px;
+    text-align: left;
+    width: 100%;
 }
 
 .box1 {
     position: relative;
-
-    margin-right: 10px;
+    margin-right: 30px;
     left: 0px;
     width: 40%;
     min-height: 600px;
@@ -15,11 +30,8 @@
 .outputText {
     position: relative;
     right: 0px;
-    width: 40%;
-    display: inline-block; 
-}
-
-.previewer {
-    position: relative;
-    width: 80%;
+    width: 50%;
+    display: inline-block;
+    text-align: left;
+    vertical-align: top;
 }
